<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingActivity" >

    <LinearLayout
        android:id="@+id/whole_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:id="@+id/edge_l_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pad_top"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_cur"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_curr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_currency"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/spinner_wraper2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/white" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:entries="@array/home_currencies" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/pad_mid_1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="2"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_fee"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_fee"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/edittext_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8">

                <EditText
                    android:id="@+id/home_number"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="none|numberDecimal"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/from_number_wrapper2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/shade" />

                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="47dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/percentage"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/pad_mid_2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/save_setting"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1.5"
                    android:text="@string/save_setting"
                    app:backgroundTint="@color/theme" />

                <LinearLayout
                    android:id="@+id/pad_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="2"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edge_r"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>