<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_anchor="@+id/convert"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:id="@+id/whole_view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/edge_l_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/content_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top_part_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/pad_top"
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/from_layout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/From"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/spinner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/spinner_wraper"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/white" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:entries="@array/currencies" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/pad_mid"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:orientation="vertical" />

                    <RelativeLayout
                        android:id="@+id/edittext_layout_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/from_number_wrapper"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/shade" />

                        <EditText
                            android:id="@+id/from_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="-6dp"
                            android:ems="10"
                            android:inputType="none|numberDecimal"
                            android:text="@string/zero" />

                        <TextView
                            android:id="@+id/from_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/from_amount"
                            android:textSize="10sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/pad_mid_2_main"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:id="@+id/to_layout_main"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.8"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/to_home_currency"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/home_curr_layout_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/home_currency_wrapper"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/white" />

                        <TextView
                            android:id="@+id/home_currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/home_currency_wrapper"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:text="@string/no_default_home_currency"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottom_part_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/image_layout_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <ImageView
                            android:id="@+id/suitcase_img"
                            android:layout_width="325dp"
                            android:layout_height="175dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/my_project"
                            android:contentDescription="suitcase_image" />

                        <TextView
                            android:id="@+id/convert_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="65dp"
                            android:text="0.00 CHF"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="@+id/suitcase_img"
                            app:layout_constraintStart_toStartOf="@+id/suitcase_img"
                            app:layout_constraintTop_toTopOf="@+id/suitcase_img" />

                        <TextView
                            android:id="@+id/fee_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:text="+ 0.00 Fee"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/suitcase_img"
                            app:layout_constraintEnd_toEndOf="@+id/suitcase_img"
                            app:layout_constraintStart_toStartOf="@+id/suitcase_img" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:id="@+id/pad_mid_3_main"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="2.5"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/convert_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Convert"
                        app:backgroundTint="@color/theme" />

                    <LinearLayout
                        android:id="@+id/pad_bottom_main"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="2.5"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edge_r"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/convert"
        app:layout_anchorGravity="top|center"
        app:layout_constraintBottom_toTopOf="@+id/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/white"
        app:layout_anchor="@+id/convert"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/settings"
        tools:layout_editor_absoluteX="356dp"
        tools:layout_editor_absoluteY="673dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>